Started adding location awareness Changed layout of garage items

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,8 @@ dependencies {
         transitive = true;
     }
 
+    compile 'com.google.android.gms:play-services:9.2.0'
+    compile 'com.google.android.gms:play-services-location:9.2.0'
+
 
 }
