--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,30 +1,35 @@
 buildscript {
     repositories {
+        google()
+        jcenter()
         maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
         classpath 'io.fabric.tools:gradle:1.+'
     }
+
 }
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
 repositories {
+    google()
+    jcenter()
     maven { url 'https://maven.fabric.io/public' }
 }
 
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "nl.blackcatapps.pchecker"
-        minSdkVersion 19
-        targetSdkVersion 24
+        minSdkVersion 21
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -35,32 +40,26 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    testCompile 'junit:junit:4.12'
-
-    compile 'com.android.support:cardview-v7:25.0.1'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile('com.mikepenz:fastadapter:2.1.0@aar') {
-        transitive = true
-    }
-    compile 'com.daimajia.numberprogressbar:library:1.2@aar'
-    compile 'com.mikepenz:fastadapter-commons:2.1.0@aar'
-    compile('com.crashlytics.sdk.android:answers:1.3.10@aar') {
+    api 'androidx.appcompat:appcompat:1.0.0'
+    androidTestImplementation 'junit:junit:4.12'
+    api 'androidx.cardview:cardview:1.0.0'
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
+    api 'com.google.android.material:material:1.0.0'
+    api 'com.squareup.retrofit2:retrofit:2.3.0'
+    api 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.mikepenz:fastadapter:3.3.1'
+    implementation "com.mikepenz:itemanimators:1.1.0"
+    api 'com.daimajia.numberprogressbar:library:1.4@aar'
+    api 'com.mikepenz:fastadapter-commons:2.1.0@aar'
+    api('com.crashlytics.sdk.android:answers:1.3.10@aar') {
         transitive = true;
     }
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
+    api('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
         transitive = true;
     }
-
-    compile 'com.google.android.gms:play-services:9.2.0'
-    compile 'com.google.android.gms:play-services-location:9.2.0'
-
-
+    api 'com.google.android.gms:play-services-location:16.0.0'
 }
